beautiful-jekyll added

--- a/index.html
+++ b/index.html
@@ -1,12 +1,5 @@
- <!DOCTYPE html>
-<html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
-
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
-</body>
-</html> 
+---
+layout: home
+title: My website
+subtitle: This is where I will tell my friends way too much about me
+---
